# saorsa-gossip

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DESIGN.md  README.md  autoresearch-rendezvous.md  autoresearch.checks.sh  autoresearch.jsonl  autoresearch.md  autoresearch.sh  justfile
.claude/: vps-test.yaml
.config/: hakari.toml
.github/workflows/: ci.yml  release.yml
.planning/: ISSUES.md  PLAN-2.md  PLAN-206.md  PLAN-207.md  PLAN-301.md  PLAN-302.md  PLAN-305.md  ROADMAP.md  STATE.json  STATE.md
.planning/archive/: .gitkeep
.planning/archive/milestone-2-20260123/: ROADMAP.md  changes.txt  git_history.txt
.planning/archive/milestone-2-20260123/plans/: PLAN-202.md  PLAN-205.md
.planning/archive/milestone-2-20260123/reviews/: task-201-2-review.md
.planning/archive/phase-2.3-20260123_145457/: ARCHIVE_SUMMARY.md  git_history.txt
.planning/archive/phase-2.4-20260123_150921/: PLAN-204.md  phase-204-review-20260123.md
.planning/archive/phase-2.6-20260123_153315/: phase-206-review-20260123.md
.planning/plans/: PLAN-201.md  PLAN-203.md
.planning/reviews/: consensus-20260131-review.md  consensus-20260205.md  consensus-20260206-003024.md  consensus-task3.md  phase-205-review-20260123.md  phase-207-review-20260123.md  task-201-1-review.md  task-201-3-review.md
benches/: performance.rs
crates/coordinator/: Cargo.toml
crates/coordinator/src/: bootstrap.rs  cache.rs  foaf.rs  gossip_cache.rs  handler.rs  lib.rs  peer_cache.rs  publisher.rs  topic.rs
crates/coordinator/tests/: seedless_bootstrap.rs
crates/crdt-sync/: Cargo.toml
crates/crdt-sync/src/: lib.rs
crates/crdt-sync/tests/: anti_entropy_convergence.rs
crates/groups/: Cargo.toml
crates/groups/src/: lib.rs
crates/identity/: Cargo.toml
crates/identity/src/: lib.rs
crates/load-test/: Cargo.toml
crates/load-test/src/: lib.rs
crates/membership/: Cargo.toml
crates/membership/proptest-regressions/: lib.txt
crates/membership/src/: lib.rs
crates/membership/tests/: swim_failure_detection.rs
crates/presence/: Cargo.toml  README.md
crates/presence/src/: lib.rs  rate_limiter.rs
crates/pubsub/: Cargo.toml
crates/pubsub/benches/: peer_scoring_contention.rs
crates/pubsub/src/: admission.rs  lib.rs  peer_scoring.rs  timing.rs
crates/pubsub/tests/: multi_node_publish.rs
crates/rendezvous/: Cargo.toml
crates/rendezvous/src/: lib.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: context.rs  coordinator.rs  lib.rs  rendezvous.rs  runtime.rs
crates/runtime/tests/: end_to_end.rs
crates/simulator/: Cargo.toml
crates/simulator/src/: lib.rs  simulated_transport.rs
crates/transport/: Cargo.toml
crates/transport/src/: ant_quic_transport.rs  ble_transport_adapter.rs  error.rs  lib.rs  multiplexed_transport.rs  multiplexer.rs  protocol_handler.rs  testing.rs  udp_transport_adapter.rs
crates/transport/tests/: close_teardown.rs  large_transfer.rs  message_volume.rs  recv_pump_concurrency.rs  signed_payload_reassembly.rs  two_node_loopback.rs
crates/transport/tests/common/: mod.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs  logging.rs
docs/: benchmarks.md
docs/adr/: ADR-004-seedless-bootstrap.md  ADR-006-mls-group-encryption.md  ADR-008-stream-multiplexing.md  ADR-009-peer-scoring.md  ADR-010-deterministic-simulator.md  ADR-011-transport-layer-simplification.md  README.md
docs/design/: pubsub-fanout-backpressure.md
examples/: throughput_test.rs  transport_benchmark.rs
saorsa-gossip-workspace-hack/: Cargo.toml
scripts/: coverage-per-crate.sh
