[workspace]
members = [
    "crates/types",
    "crates/transport",
    "crates/membership",
    "crates/pubsub",
    "crates/presence",
    "crates/crdt-sync",
    "crates/groups",
    "crates/identity",
    "crates/coordinator",
    "crates/rendezvous",
    "crates/simulator",
    "crates/load-test",
    "bin/coordinator",
    "bin/cli",
    "tests",
]
resolver = "2"

[workspace.package]
version = "0.1.20"
edition = "2021"
authors = ["David Irvine <david@saorsalabs.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dirvine/saorsa-gossip"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"

# Networking
bytes = "1.5"
anyhow = "1.0"

# Cryptography (PQC)
saorsa-pqc = "0.3.14"
saorsa-mls = "0.3.1"

# QUIC transport
ant-quic = "0.15"

# Hashing
blake3 = "1.5"
sha2 = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Data structures
lru = "0.12"

# Logging
tracing = "0.1"

# CRDT
# We'll need delta-CRDT implementations

# Testing
proptest = "1.4"
tokio-test = "0.4"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
