[workspace]
members = [
    "crates/types",
    "crates/transport",
    "crates/membership",
    "crates/pubsub",
    "crates/presence",
    "crates/crdt-sync",
    "crates/groups",
    "crates/identity",
    "crates/coordinator",
    "crates/rendezvous",
    "crates/runtime",
    "bin/coordinator",
    "bin/cli",
]
resolver = "2"

[workspace.package]
version = "0.4.7"
edition = "2021"
authors = ["David Irvine <david@saorsalabs.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dirvine/saorsa-gossip"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"

# Networking
bytes = "1.5"
anyhow = "1.0"

# Cryptography (PQC)
saorsa-pqc = "0.4"
saorsa-mls = "0.3.4"

# QUIC transport
ant-quic = "0.21"

# Shared transport layer

# Hashing
blake3 = "1.5"
sha2 = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
postcard = { version = "1.1.3", features = ["use-std"] }

# Data structures
lru = "0.16"

# Logging
tracing = "0.1"

# CRDT
# We'll need delta-CRDT implementations

# Internal crates (keep versions in sync automatically)
saorsa-gossip-types = { version = "0.4.7", path = "crates/types" }
saorsa-gossip-transport = { version = "0.4.7", path = "crates/transport" }
saorsa-gossip-membership = { version = "0.4.7", path = "crates/membership" }
saorsa-gossip-pubsub = { version = "0.4.7", path = "crates/pubsub" }
saorsa-gossip-presence = { version = "0.4.7", path = "crates/presence" }
saorsa-gossip-crdt-sync = { version = "0.4.7", path = "crates/crdt-sync" }
saorsa-gossip-groups = { version = "0.4.7", path = "crates/groups" }
saorsa-gossip-identity = { version = "0.4.7", path = "crates/identity" }
saorsa-gossip-coordinator = { version = "0.4.7", path = "crates/coordinator" }
saorsa-gossip-rendezvous = { version = "0.4.7", path = "crates/rendezvous" }
saorsa-gossip-runtime = { version = "0.4.7", path = "crates/runtime" }

# Testing
proptest = "1.4"
tokio-test = "0.4"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
