[package]
name = "saorsa-gossip-workspace-hack"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
path = "src/lib.rs"

### BEGIN HAKARI SECTION
[dependencies]
bytes = { version = "1", features = ["serde"] }
crypto-common = { version = "0.1", default-features = false, features = ["getrandom", "std"] }
digest = { version = "0.10", features = ["mac", "std"] }
either = { version = "1" }
futures-channel = { version = "0.3", default-features = false, features = ["sink", "std"] }
futures-core = { version = "0.3" }
futures-sink = { version = "0.3" }
futures-util = { version = "0.3", features = ["channel", "io", "sink"] }
generic-array = { version = "0.14", default-features = false, features = ["more_lengths", "zeroize"] }
getrandom = { version = "0.2", default-features = false, features = ["std"] }
hashbrown = { version = "0.16" }
libc = { version = "0.2", features = ["extra_traits"] }
log = { version = "0.4", default-features = false, features = ["std"] }
num-traits = { version = "0.2", default-features = false, features = ["std"] }
once_cell = { version = "1" }
ppv-lite86 = { version = "0.2", default-features = false, features = ["simd", "std"] }
rand_core-274715c4dabd11b0 = { package = "rand_core", version = "0.9", default-features = false, features = ["os_rng", "std"] }
rand_core-3b31131e45eafb45 = { package = "rand_core", version = "0.6", default-features = false, features = ["std"] }
regex-automata = { version = "0.4", default-features = false, features = ["dfa-build", "dfa-onepass", "hybrid", "meta", "nfa-backtrack", "perf-inline", "perf-literal", "std", "unicode"] }
regex-syntax = { version = "0.8" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "default-tls", "json", "rustls-tls"] }
serde = { version = "1", features = ["alloc", "derive"] }
serde_core = { version = "1", default-features = false, features = ["alloc", "result", "std"] }
smallvec = { version = "1", default-features = false, features = ["const_generics"] }
subtle = { version = "2", features = ["const-generics"] }
time = { version = "0.3", features = ["formatting", "local-offset", "parsing"] }
tokio = { version = "1", features = ["full", "test-util"] }
tracing = { version = "0.1", features = ["log"] }
tracing-core = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "local-time"] }
zerocopy = { version = "0.8", default-features = false, features = ["derive", "simd"] }
zeroize = { version = "1", features = ["derive"] }

[build-dependencies]
cc = { version = "1", default-features = false, features = ["parallel"] }
proc-macro2 = { version = "1" }
quote = { version = "1" }
syn = { version = "2", features = ["extra-traits", "fold", "full", "visit", "visit-mut"] }

### END HAKARI SECTION
