[package]
name = "saorsa-gossip-coordinator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Coordinator advertisements for seedless bootstrap in Saorsa Gossip"
keywords = ["p2p", "gossip", "coordinator", "nat-traversal", "bootstrap"]
categories = ["network-programming"]

[dependencies]
saorsa-gossip-types = { workspace = true }
saorsa-pqc = { workspace = true }
ant-quic = { workspace = true }
serde = { workspace = true }
serde_bytes = "0.11"
postcard = { workspace = true }
ciborium = "0.2"
bytes = { workspace = true }
anyhow = { workspace = true }
blake3 = { workspace = true }
lru = { workspace = true }
tokio = { workspace = true }
fs2 = "0.4"
rand = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tokio-test = { workspace = true }
tempfile = "3.8"

[lints]
workspace = true
