[package]
name = "saorsa-gossip-crdt-sync"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Delta-CRDTs for Saorsa Gossip: OR-Set, LWW-Register with anti-entropy sync"
keywords = ["crdt", "distributed", "synchronization", "delta-crdt", "or-set"]
categories = ["data-structures", "algorithms"]

[dependencies]
saorsa-gossip-types = { version = "0.2.0", path = "../types" }
saorsa-gossip-transport = { version = "0.2.0", path = "../transport" }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
blake3 = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tokio = { workspace = true }
