[package]
name = "saorsa-gossip-crdt-sync"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Delta-CRDTs for Saorsa Gossip: OR-Set, LWW-Register with anti-entropy sync"
keywords = ["crdt", "distributed", "synchronization", "delta-crdt", "or-set"]
categories = ["data-structures", "algorithms"]

[dependencies]
saorsa-gossip-types = { workspace = true }
saorsa-gossip-transport = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
blake3 = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tokio = { workspace = true }
saorsa-gossip-workspace-hack = { version = "0.1", path = "../../saorsa-gossip-workspace-hack" }

[lints]
workspace = true
