[package]
name = "saorsa-gossip-groups"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "MLS group management wrapper for Saorsa Gossip (RFC 9420 compliant)"
keywords = ["mls", "e2ee", "groups", "encryption", "messaging"]
categories = ["cryptography"]

[dependencies]
saorsa-gossip-types = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
saorsa-mls = { workspace = true }
saorsa-pqc = { workspace = true }
blake3 = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
