[package]
name = "saorsa-gossip-identity"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Post-quantum identity management for Saorsa Gossip: ML-DSA-65 keypairs and PeerId derivation"
keywords = ["post-quantum", "ml-dsa", "identity", "cryptography", "pqc"]
categories = ["cryptography"]

[dependencies]
saorsa-gossip-types = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
blake3 = { workspace = true }
saorsa-pqc = { workspace = true }
bincode = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tokio = { workspace = true }
tokio-test = { workspace = true }
tempfile = "3.0"
