[package]
name = "saorsa-gossip-load-test"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

description = "Load testing framework for Saorsa Gossip performance validation"

[dependencies]
# Core async runtime
tokio = { workspace = true, features = ["full", "rt-multi-thread"] }

# Error handling
anyhow = { workspace = true }
thiserror = "1.0"

# Serialization for message passing
serde = { workspace = true, features = ["derive"] }
bincode = { workspace = true }

# Random number generation for load simulation
rand = { workspace = true }
rand_pcg = "0.3"

# Time handling and metrics
chrono = "0.4"

# Logging
tracing = { workspace = true }

# High-performance collections
dashmap = "6.1"
crossbeam = "0.8"

# Statistics and metrics
hdrhistogram = "7.5"

# Local crates
saorsa-gossip-types = { version = "0.2.0", path = "../types" }
saorsa-gossip-transport = { version = "0.2.0", path = "../transport" }
saorsa-gossip-simulator = { version = "0.2.0", path = "../simulator" }

[dev-dependencies]
tokio-test = { workspace = true }
criterion = { workspace = true }
proptest = { workspace = true }

[[example]]
name = "load_test_demo"
path = "../../examples/load_test_demo.rs"
