[package]
name = "saorsa-gossip-membership"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Membership protocols for Saorsa Gossip: HyParView partial views and SWIM failure detection"
keywords = ["p2p", "gossip", "membership", "swim", "hyparview"]
categories = ["network-programming", "algorithms"]

[dependencies]
saorsa-gossip-types = { version = "0.1.3", path = "../types" }
saorsa-gossip-transport = { version = "0.1.3", path = "../transport" }
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
bincode = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tokio-test = { workspace = true }
