[package]
name = "saorsa-gossip-membership"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Membership protocols for Saorsa Gossip: HyParView partial views and SWIM failure detection"
keywords = ["p2p", "gossip", "membership", "swim", "hyparview"]
categories = ["network-programming", "algorithms"]

[dependencies]
saorsa-gossip-types = { workspace = true }
saorsa-gossip-transport = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
postcard = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tokio-test = { workspace = true }
saorsa-gossip-transport = { workspace = true, features = ["test-helpers"] }
saorsa-gossip-workspace-hack = { version = "0.1", path = "../../saorsa-gossip-workspace-hack" }

[lints]
workspace = true
