[package]
name = "saorsa-gossip-presence"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Presence beacons and FOAF discovery for Saorsa Gossip overlay network"
keywords = ["p2p", "gossip", "presence", "discovery", "foaf"]
categories = ["network-programming"]

[dependencies]
saorsa-gossip-types = { version = "0.2.0", path = "../types" }
saorsa-gossip-transport = { version = "0.2.0", path = "../transport" }
saorsa-gossip-groups = { version = "0.2.0", path = "../groups" }
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
blake3 = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tokio = { workspace = true }
