[package]
name = "saorsa-gossip-presence"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Presence beacons and FOAF discovery for Saorsa Gossip overlay network"
keywords = ["p2p", "gossip", "presence", "discovery", "foaf"]
categories = ["network-programming"]

[dependencies]
saorsa-gossip-types = { workspace = true }
saorsa-gossip-transport = { workspace = true }
saorsa-gossip-groups = { workspace = true }
saorsa-gossip-identity = { workspace = true }
saorsa-pqc = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
blake3 = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tokio = { workspace = true }
saorsa-gossip-transport = { workspace = true, features = ["test-helpers"] }

[lints]
workspace = true
