[package]
name = "saorsa-gossip-pubsub"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Pub/sub for Saorsa Gossip: Plumtree epidemic broadcast with EAGER/IHAVE/IWANT"
keywords = ["p2p", "gossip", "pubsub", "plumtree", "broadcast"]
categories = ["network-programming"]

[dependencies]
saorsa-gossip-types = { version = "0.2.0", path = "../types" }
saorsa-gossip-transport = { version = "0.2.0", path = "../transport" }
saorsa-gossip-membership = { version = "0.2.0", path = "../membership" }
saorsa-gossip-identity = { version = "0.2.0", path = "../identity" }
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
bytes = { version = "1.5", features = ["serde"] }
anyhow = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
lru = { workspace = true }
tracing = { workspace = true }
blake3 = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tokio-test = { workspace = true }
