[package]
name = "saorsa-gossip-pubsub"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Pub/sub for Saorsa Gossip: Plumtree epidemic broadcast with EAGER/IHAVE/IWANT"
keywords = ["p2p", "gossip", "pubsub", "plumtree", "broadcast"]
categories = ["network-programming"]

[dependencies]
saorsa-gossip-types = { workspace = true }
saorsa-gossip-transport = { workspace = true }
saorsa-gossip-membership = { workspace = true }
saorsa-gossip-identity = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
bytes = { version = "1.5", features = ["serde"] }
anyhow = { workspace = true }
serde = { workspace = true }
postcard = { workspace = true }
lru = { workspace = true }
tracing = { workspace = true }
blake3 = { workspace = true }
saorsa-gossip-workspace-hack = { version = "0.1", path = "../../saorsa-gossip-workspace-hack" }

[dev-dependencies]
proptest = { workspace = true }
tokio-test = { workspace = true }
saorsa-gossip-transport = { workspace = true, features = ["test-helpers"] }
