[package]
name = "saorsa-gossip-rendezvous"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Rendezvous shards for global findability in Saorsa Gossip"
keywords = ["p2p", "gossip", "rendezvous", "discovery", "sharding"]
categories = ["network-programming"]

[dependencies]
saorsa-gossip-types = { workspace = true }
saorsa-pqc = { workspace = true }
serde = { workspace = true }
ciborium = "0.2"
bytes = { workspace = true }
anyhow = { workspace = true }
blake3 = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tokio-test = { workspace = true }
saorsa-gossip-workspace-hack = { version = "0.1", path = "../../saorsa-gossip-workspace-hack" }

[lints]
workspace = true
