[package]
name = "saorsa-gossip-simulator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

description = "Deterministic network simulator for testing Saorsa Gossip protocols"

[dependencies]
# Core async runtime
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }

# Error handling
thiserror = "1.0"

# Serialization for message passing
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
bincode = { workspace = true }

# Random number generation for deterministic simulation
rand = { workspace = true }
rand_pcg = "0.3"  # PCG for deterministic random numbers

# Time handling
chrono = "0.4"

# Logging
tracing = { workspace = true }

# Local crates
saorsa-gossip-types = { version = "0.2.0", path = "../types" }
saorsa-gossip-transport = { version = "0.2.0", path = "../transport" }

# Async utilities
bytes = { workspace = true }
anyhow = { workspace = true }

# Chaos engineering
tokio-util = { version = "0.7", features = ["time"] }

[dev-dependencies]
tokio-test = { workspace = true }
proptest = { workspace = true }

[[example]]
name = "chaos_demo"
path = "../../examples/chaos_demo.rs"

[[example]]
name = "simulator_demo"
path = "../../examples/simulator_demo.rs"
