[package]
name = "saorsa-gossip-transport"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "QUIC transport for Saorsa Gossip with ant-quic, NAT traversal, and stream multiplexing"
keywords = ["p2p", "gossip", "quic", "nat-traversal", "networking"]
categories = ["network-programming", "asynchronous"]

[features]
test-helpers = []

[dependencies]
saorsa-gossip-types = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }
thiserror = "2.0"
tracing = { workspace = true }
ant-quic = { workspace = true }
serde = { workspace = true }
postcard = { workspace = true }
dirs = "5.0"
uuid = { version = "1.6", features = ["v4"] }
futures = "0.3"

[dev-dependencies]
proptest = { workspace = true }
tracing-subscriber = "0.3"
saorsa-gossip-workspace-hack = { version = "0.1", path = "../../saorsa-gossip-workspace-hack" }

[[example]]
name = "throughput_test"
path = "../../examples/throughput_test.rs"

[lints]
workspace = true
